--- a/Styles/main.css
+++ b/Styles/main.css
@@ -7,12 +7,12 @@ body {
   height: 100vh;
 }
 
-.container {
+.c-container {
   width: 100%;
   height: 100%;
 }
 
-.banner {
+.c-container__banner {
   background-color: orangered;
   text-align: center;
   height: 20%;
@@ -28,11 +28,38 @@ h1 {
   text-shadow: 1px 1px black;
 }
 
-.main {
+.c-container__main {
   background-color: beige;
   height: 70%;
   text-align: center;
   display: flex;
+}
+
+input {
+  width: 60%;
+  height: auto;
+  margin-top: 100px;
+  padding: 2px;
+}
+
+.c-box-3__scissors_img {
+  padding-top: 20px;
+}
+
+.c-main__reset-button {
+  display: none;
+  border: 1px solid brown;
+  border-radius: 2px;
+  background-color: orangered;
+  height: 25%;
+  width: 50%;
+  color: white;
+  text-shadow: 1px 1px black;
+  font-size: 24px;
+  position: absolute;
+  left: 25%;
+  top:50%;
+  cursor: grab;
 }
 
 footer {
@@ -57,44 +84,28 @@ p {
   letter-spacing: .6px;
 }
 
-input {
-  width: 60%;
-  height: auto;
-  margin-top: 100px;
-  padding: 2px;
-}
-
 @media (max-width: 576px) {
-  .main {
+  .c-container__main {
     flex-direction: column;
   }
+
   input {
   width: 30%;
   height: auto;
   margin-top: 2px;
   padding: 2px;
   }
+
   h1 {
     font-size: 24px;
     line-height: 30px;
   }
+
   p {
     font-size: 12px;
     line-height: 20px;
   }
 }
 
-.reset_button {
-  display: none;
-  border: 1px solid brown;
-  border-radius: 2px;
-  background-color: orangered;
-  height: 25%;
-  width: 50%;
-  color: white;
-  text-shadow: 1px 1px black;
-  font-size: 24px;
-  position: absolute;
-  left: 25%;
-  top:50%;
-}
+
+
