--- a/Styles/main.css
+++ b/Styles/main.css
@@ -38,6 +38,7 @@ h1 {
 .c-main__boxHolder {
   text-align: center;
   display: flex;
+  padding: 2px;
 }
 
 input {
@@ -65,6 +66,7 @@ input {
   left: 25%;
   top:50%;
   cursor: grab;
+  padding: 2px;
 }
 
 footer {
